Fixed the bug with the flickering pictures in the settings section when right clicking etc

--- a/apps/win8/Instasoda/css/homePage.css
+++ b/apps/win8/Instasoda/css/homePage.css
@@ -26,7 +26,7 @@ ul, li, h2              { margin: 0; padding: 0; }
 
 #settings
 {
-    -ms-grid-columns: auto;
+    -ms-grid-columns: 2fr 2fr 4fr;
 }
 
 .profileBox {     
@@ -92,7 +92,6 @@ ul, li, h2              { margin: 0; padding: 0; }
 
 #userPictures {
     display:block;
-    position:relative;
     clear:right;
     overflow:hidden;
 }
